Resolves: tdf#116116 vertically center line in allocated height

Change-Id: Iee4cd859cdc52a2272f5b01c3e4a57336cc336a4